# Orderbook

./: .gitignore  CMakeLists.txt  README.md  build.ps1
.github/workflows/: builld_and_test.yml  test.yml
core/: CMakeLists.txt
core/app/: CMakeLists.txt  main.cpp
core/lib/: Book.cpp  Book.hpp  CMakeLists.txt  Limit.cpp  Limit.hpp  LimitTree.cpp  LimitTree.hpp  Order.cpp  Order.hpp  Price.cpp  Price.hpp  Side.hpp
core/res/: application.toml  test.toml
core/src/: Book.cpp  Book.hpp  CMakeLists.txt  Limit.cpp  Limit.hpp  LimitTree.cpp  LimitTree.hpp  Order.cpp  Order.hpp  Orderbook.cpp  Orderbook.hpp  Side.hpp  configuration.cpp  configuration.hpp  main.cpp
core/test/: CMakeLists.txt  CMakeLists.txt.in  LimitTreeTest.cpp  bookTest.cpp  configurationTest.cpp  main.cpp
